clusters/home-one/flux-system/hello-server-lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/ip-allocated-from-pool: production
  labels:
    app: hello-server
  name: hello-server
  namespace: default
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.152.183.23
  clusterIPs:
    - 10.152.183.23
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - nodePort: 32083
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: hello-server
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 127.0.1.10
        ipMode: VIP
